yaml/oauth2-proxy/oauth2-proxy-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
  namespace: opengrok
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: oauth2-proxy
  template:
    metadata:
      labels:
        k8s-app: oauth2-proxy
    spec:
      containers:
      - args:
        - --provider=oidc
        - --http-address=0.0.0.0:4180
        - --redirect-url=https://opengrok.vips.vistaprint.io/oauth2/callback
        - --oidc-issuer-url=https://cimpress.auth0.com/
        - --login-url=https://cimpress.auth0.com/authorize
        - --redeem-url=https://oauth.cimpress.io/v2/token
        - --validate-url=https://cimpress.auth0.com/userinfo
        - --email-domain=*
        - --upstream=file:///dev/null
        - --set-authorization-header=true
        - --skip-provider-button=true
        image: bitnami/oauth2-proxy
        imagePullPolicy: Always
        name: oauth2-proxy
        ports:
        - containerPort: 4180
          protocol: TCP
