yaml/oauth2-proxy/oauth2-proxy.-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
  namespace: opengrok
spec:
  ports:
  - name: http
    nodePort: 31177
    port: 4180
    protocol: TCP
    targetPort: 4180
  selector:
    k8s-app: oauth2-proxy
  type: NodePort
