yaml/oauth2-proxy/oauth2-proxy-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: oauth2-proxy
  namespace: opengrok
spec:
  tls:
    - hosts:
      - opengrok.vips.vistaprint.io
      secretName: opengrok-tls
  rules:
  - host: opengrok.vips.vistaprint.io
    http:
      paths:
      - backend:
          serviceName: oauth2-proxy
          servicePort: 4180
        path: /oauth2
